removed prints for cleaner code

--- a/data visualization.ipynb
+++ b/data visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "40f02e51-7f44-4cb3-854f-a3a2afdf9da0",
    "metadata": {},
    "outputs": [
@@ -386,13 +386,12 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
-    "data=pd.read_csv('education_career_success.csv')\n",
-    "data\n"
+    "data=pd.read_csv('education_career_success.csv')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "601543cb-03d1-4d3d-b391-87529bd31876",
    "metadata": {},
    "outputs": [
@@ -419,12 +418,12 @@
     }
    ],
    "source": [
-    "data.SAT_Score\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "f9718364-5d31-4783-b92a-8936aefd826a",
    "metadata": {},
    "outputs": [],
@@ -438,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "cb5958fa-b3dd-4847-ac92-b00b96b8e322",
    "metadata": {},
    "outputs": [
