cleaned it up a bit

--- a/data visualization.ipynb
+++ b/data visualization.ipynb
@@ -386,39 +386,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
-    "data=pd.read_csv('education_career_success.csv')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "601543cb-03d1-4d3d-b391-87529bd31876",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       1052\n",
-       "1       1211\n",
-       "2       1193\n",
-       "3       1497\n",
-       "4       1012\n",
-       "        ... \n",
-       "4995    1258\n",
-       "4996    1032\n",
-       "4997    1299\n",
-       "4998    1038\n",
-       "4999    1145\n",
-       "Name: SAT_Score, Length: 5000, dtype: int64"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n"
+    "data=pd.read_csv('education_career_success.csv')\n",
+    "data"
    ]
   },
   {
@@ -476,38 +445,6 @@
     "plt.text(0.5,1, f\"Minimum GPA is {min_GPA} and maximum GPA is {max_GPA} and Minimum salary is {min_salary} and maximum salary is {max_salary}\",fontsize=10, bbox=dict(facecolor='white', alpha=0.7))\n",
     "plt.show"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5d8cbe41-f2a2-46c8-8e29-e625da9dbfd0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8093ddf9-b417-431e-b0df-f07b12e6f82a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "129cfee1-8a9c-44d0-aaee-d72776af3aef",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b24611c-7ca8-40a4-8647-dec56d513abc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
